data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1568.wast
;; 9. **Test 9: Complex Loop with Breaks and Unreachable Leading to Type Confusion**    - A complex `loop` construction using `br` instructions where an `unreachable` instruction leads to mismatching types upon breaking the loop.    - **Constraint Checked:** Evaluates if loop breaks correctly handle the type derivation involving an `unreachable` instruction.

(assert_invalid
  (module (func $complex-loop-unreachable-type-confusion (result i32)
    (loop (result i32)
      (block
        (br 1 (i32.const 0))  ;; Breaks the loop, expecting i32 type
        (unreachable)        ;; Leads to a trap, type confusion happens here
        (i64.const 1)        ;; This mismatches as it breaks the loop expecting an i32
      )
    )
  ))
  "type mismatch"
)